deploy/testing/deployment-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boxxer-client-testing
  namespace: default
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 10
  selector:
    matchLabels:
      app: boxxer-client-testing
  template:
    metadata:
      labels:
        app: boxxer-client-testing
    spec:
      containers:
        - name: boxxer-client-testing
          image: registry.digitalocean.com/boxxer-docker-images/boxxer-client-testing:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500M"
              cpu: "0.5"
            requests:
              memory: "300M"
              cpu: "0.1"
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
            initialDelaySeconds: 5
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
            initialDelaySeconds: 5
            timeoutSeconds: 10
            failureThreshold: 3
