deploy/testing/service-testing.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: boxxer-client-testing
  name: boxxer-client-testing
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: boxxer-client-testing
  type: ClusterIP
